fix(ingress): extend configmap to force update and retry planka deploy

--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -24,5 +24,5 @@ spec:
                 name: planka
                 port:
                   number: 80
-# Force update: sync with ingress controller update
+# Force update: retry with extended configmap
 
