--- a/core/b2b/core-services/ingress-nginx/configmap-patch.yaml
+++ b/core/b2b/core-services/ingress-nginx/configmap-patch.yaml
@@ -5,3 +5,5 @@ metadata:
   namespace: ingress-nginx
 data:
   allow-snippet-annotations: "true"
+  enable-underscores-in-headers: "true"
+  use-forwarded-headers: "true"
