fix(ingress): disable validation webhook by clearing configuration

--- a/core/b2b/core-services/ingress-nginx/ingress-nginx.yaml
+++ b/core/b2b/core-services/ingress-nginx/ingress-nginx.yaml
@@ -524,3 +524,15 @@ metadata:
   name: nginx
 spec:
   controller: k8s.io/ingress-nginx
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
+metadata:
+  labels:
+    app.kubernetes.io/component: admission-webhook
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/version: 1.12.0
+  name: ingress-nginx-admission
+webhooks: []
