fix(ingress): add publish-service arg to report correct LB IP

--- a/core/b2b/core-services/ingress-nginx/ingress-nginx.yaml
+++ b/core/b2b/core-services/ingress-nginx/ingress-nginx.yaml
@@ -428,6 +428,7 @@ spec:
         - --controller-class=k8s.io/ingress-nginx
         - --ingress-class=nginx
         - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
+        - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
         # Webhook disabled
         # - --validating-webhook=:8443
         # - --validating-webhook-certificate=/usr/local/certificates/cert
