--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -24,5 +24,5 @@ spec:
                 name: planka
                 port:
                   number: 80
-# Force update: retry after webhook cleanup
+# Force update: retry with publish-service arg
 
