fix(planka): enable TLS in ingress to resolve 404 on HTTPS

--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -13,6 +13,10 @@ metadata:
       sub_filter_types *;
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - planka.ka0s.io
+      secretName: planka-tls-cert
   rules:
     - host: planka.ka0s.io
       http:
