fix(ingress): force restart to apply publish-service args

--- a/core/b2b/core-services/ingress-nginx/ingress-nginx.yaml
+++ b/core/b2b/core-services/ingress-nginx/ingress-nginx.yaml
@@ -414,6 +414,8 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2026-02-09T10:00:00Z"
       labels:
         app.kubernetes.io/component: controller
         app.kubernetes.io/instance: ingress-nginx
