--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
       proxy_set_header Accept-Encoding "";
       sub_filter "http://192.168.1.244" "https://planka.ka0s.io";
       sub_filter_once off;
-      sub_filter_types *;
+      sub_filter_types text/html application/javascript application/json;
 spec:
   ingressClassName: nginx
   tls:
@@ -28,5 +28,5 @@ spec:
                 name: planka
                 port:
                   number: 80
-# Force update: retry with publish-service arg
+# Force update: retry with extended sub_filter_types for JSON support
 
