fix(planka): switch service to ClusterIP and rename ingress to force recreate

--- a/core/b2b/core-services/planka/planka-deployment.yaml
+++ b/core/b2b/core-services/planka/planka-deployment.yaml
@@ -91,7 +91,7 @@ metadata:
   name: planka
   namespace: planka
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 1337
