--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: planka
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     # nginx.ingress.kubernetes.io/configuration-snippet: |
     #   add_header X-Debug-Snippet "true" always;
     #   proxy_set_header Accept-Encoding "";
