fix: add backend-protocol annotation to match itop config

--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     #   sub_filter "http://192.168.1.244" "https://planka.ka0s.io";
     #   sub_filter_once off;
     #   sub_filter_types text/html application/javascript application/json;
-# Force update: debugging ingress controller sync issue
+# Force update: debugging ingress controller sync issue part 2
 spec:
   ingressClassName: nginx
   rules:
