fix: force planka rollout and extend sub_filter for css

--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -11,8 +11,8 @@ metadata:
       proxy_set_header Accept-Encoding "";
       sub_filter "http://192.168.1.244" "https://planka.ka0s.io";
       sub_filter_once off;
-      sub_filter_types text/html application/javascript application/json;
-# Force update: debugging ingress controller sync issue part 3
+      sub_filter_types text/html text/css application/javascript application/json;
+# Force update: debugging ingress controller sync issue part 4
 spec:
   ingressClassName: nginx
   rules:
