fix: update liveness/readiness probes port to match secure-port 4443

--- a/core/b2b/core-services/metrics-server/patch-insecure.yaml
+++ b/core/b2b/core-services/metrics-server/patch-insecure.yaml
@@ -15,3 +15,19 @@ spec:
           - --kubelet-use-node-status-port
           - --metric-resolution=15s
           - --kubelet-insecure-tls
+        ports:
+          - containerPort: 4443
+            name: https
+            protocol: TCP
+        livenessProbe:
+          httpGet:
+            path: /livez
+            port: https
+            scheme: HTTPS
+          initialDelaySeconds: 60
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: https
+            scheme: HTTPS
+          initialDelaySeconds: 60
