fix: use numeric port 4443 for probes to avoid resolution issues

--- a/core/b2b/core-services/metrics-server/patch-insecure.yaml
+++ b/core/b2b/core-services/metrics-server/patch-insecure.yaml
@@ -22,12 +22,12 @@ spec:
         livenessProbe:
           httpGet:
             path: /livez
-            port: https
+            port: 4443
             scheme: HTTPS
           initialDelaySeconds: 60
         readinessProbe:
           httpGet:
             path: /readyz
-            port: https
+            port: 4443
             scheme: HTTPS
           initialDelaySeconds: 60
