--- a/core/b2b/core-services/metrics-server/patch-insecure.yaml
+++ b/core/b2b/core-services/metrics-server/patch-insecure.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: kube-system
 spec:
   template:
+    metadata:
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2026-02-09T12:20:00Z"
     spec:
       containers:
       - name: metrics-server
