--- a/core/b2b/core-services/metrics-server/patch-insecure.yaml
+++ b/core/b2b/core-services/metrics-server/patch-insecure.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2026-02-09T12:20:00Z"
+        kubectl.kubernetes.io/restartedAt: "2026-02-09T12:30:00Z"
     spec:
       containers:
       - name: metrics-server
@@ -19,6 +19,8 @@ spec:
           - --metric-resolution=15s
           - --kubelet-insecure-tls
         ports:
+          - containerPort: 10250
+            name: https-deprecated
           - containerPort: 4443
             name: https
             protocol: TCP
