--- a/core/b2b/core-services/itop/database-deployment.yaml
+++ b/core/b2b/core-services/itop/database-deployment.yaml
@@ -40,7 +40,7 @@ spec:
             periodSeconds: 10
           readinessProbe:
             exec:
-              command: ["mysqladmin", "ping", "-h", "localhost"]
+              command: ["sh", "-c", "mysqladmin ping -h localhost -u root -p$MYSQL_ROOT_PASSWORD"]
             initialDelaySeconds: 10
             periodSeconds: 10
           env:
