--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -5,14 +5,13 @@ metadata:
   namespace: planka
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      add_header X-Debug-Snippet "true" always;
-      proxy_set_header Accept-Encoding "";
-      sub_filter "http://192.168.1.244" "https://planka.ka0s.io";
-      sub_filter_once off;
-      sub_filter_types text/html text/css application/javascript application/json;
-# Force update: debugging ingress controller sync issue part 4
+    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #  add_header X-Debug-Snippet "true" always;
+    #  proxy_set_header Accept-Encoding "";
+    #  sub_filter "http://192.168.1.244" "https://planka.ka0s.io";
+    #  sub_filter_once off;
+    #  sub_filter_types text/html text/css application/javascript application/json;
 spec:
   ingressClassName: nginx
   rules:
