--- a/core/b2b/core-services/planka/planka-deployment.yaml
+++ b/core/b2b/core-services/planka/planka-deployment.yaml
@@ -91,8 +91,7 @@ metadata:
   name: planka
   namespace: planka
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 192.168.1.244
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 1337
