--- a/core/b2b/core-services/kubernetes-dashboard/ingress.yaml
+++ b/core/b2b/core-services/kubernetes-dashboard/ingress.yaml
@@ -6,8 +6,14 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - dashboard.ka0s.io
+      secretName: ka0s-wildcard-tls
   rules:
     - host: dashboard.ka0s.io
       http:
