--- a/core/b2b/core-services/kubernetes-dashboard/service-patch.yaml
+++ b/core/b2b/core-services/kubernetes-dashboard/service-patch.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 443
     targetPort: 8443
