--- a/core/b2b/core-services/soc/01-security-job.yaml
+++ b/core/b2b/core-services/soc/01-security-job.yaml
@@ -31,7 +31,7 @@ roleRef:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: wazuh-cert-generator
+  name: wazuh-cert-generator-v2
   namespace: soc
 spec:
   ttlSecondsAfterFinished: 600
