fix(soc): rotate wazuh indexer persistence to v2 to bypass immutable pv error

--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -100,7 +100,7 @@ spec:
       volumes:
         - name: wazuh-indexer-data
           persistentVolumeClaim:
-            claimName: wazuh-indexer-pvc
+            claimName: wazuh-indexer-pvc-v2
         - name: certificates
           secret:
             secretName: wazuh-indexer-certs
