--- a/core/b2b/core-services/soc/wazuh-indexer-pvc.yaml
+++ b/core/b2b/core-services/soc/wazuh-indexer-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wazuh-indexer-pvc
+  name: wazuh-indexer-pvc-v2
   namespace: soc
 spec:
   storageClassName: manual
