--- a/core/b2b/core-services/soc/wazuh-indexer-pv.yaml
+++ b/core/b2b/core-services/soc/wazuh-indexer-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: wazuh-indexer-pv
+  name: wazuh-indexer-pv-v2
   labels:
     type: local
 spec:
