fix(soc): update wazuh-agent image to 4.9.0 to fix pull error

--- a/core/b2b/core-services/soc/06-agent-daemonset.yaml
+++ b/core/b2b/core-services/soc/06-agent-daemonset.yaml
@@ -33,7 +33,7 @@ spec:
       containers:
         # Wazuh Agent Container
         - name: wazuh-agent
-          image: wazuh/wazuh-agent:4.9.0-1
+          image: wazuh/wazuh-agent:4.9.0
           env:
             - name: WAZUH_MANAGER
               value: "wazuh-manager.soc.svc"
