--- a/core/b2b/core-services/soc/06-agent-daemonset.yaml
+++ b/core/b2b/core-services/soc/06-agent-daemonset.yaml
@@ -33,7 +33,8 @@ spec:
       containers:
         # Wazuh Agent Container
         - name: wazuh-agent
-          image: wazuh/wazuh-agent:4.9.0-1
+          image: wazuh/wazuh-agent:4.14.2
+          imagePullPolicy: Always
           env:
             - name: WAZUH_MANAGER
               value: "wazuh-manager.soc.svc"
