fix(soc): resolve agent crashloop by fixing log mounts and log paths

--- a/core/b2b/core-services/soc/06-agent-config.yaml
+++ b/core/b2b/core-services/soc/06-agent-config.yaml
@@ -18,19 +18,19 @@ data:
       <!-- Log Analysis from Host -->
       <localfile>
         <log_format>syslog</log_format>
-        <location>/var/log/syslog</location>
+        <location>/host/var/log/syslog</location>
       </localfile>
       <localfile>
         <log_format>syslog</log_format>
-        <location>/var/log/auth.log</location>
+        <location>/host/var/log/auth.log</location>
       </localfile>
       <localfile>
         <log_format>syslog</log_format>
-        <location>/var/log/dpkg.log</location>
+        <location>/host/var/log/dpkg.log</location>
       </localfile>
       <localfile>
         <log_format>syslog</log_format>
-        <location>/var/log/kern.log</location>
+        <location>/host/var/log/kern.log</location>
       </localfile>
 
       <!-- Suricata Integration -->
