Fix: Suricata interface detection (default/host) and Indexer Heap size

--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -49,7 +49,7 @@ spec:
               name: indexer-nodes
           env:
             - name: OPENSEARCH_JAVA_OPTS
-              value: "-Xms1g -Xmx1g"
+              value: "-Xms512m -Xmx512m"
             - name: NETWORK_HOST
               value: "0.0.0.0"
             - name: NODE_NAME
