--- a/core/b2b/core-services/soc/03-indexer.yaml
+++ b/core/b2b/core-services/soc/03-indexer.yaml
@@ -37,7 +37,7 @@ spec:
           image: wazuh/wazuh-indexer:4.14.2
           resources:
             requests:
-              memory: "1.5Gi"
+              memory: "2Gi"
               cpu: "500m"
             limits:
               memory: "4Gi"
@@ -49,7 +49,7 @@ spec:
               name: indexer-nodes
           env:
             - name: OPENSEARCH_JAVA_OPTS
-              value: "-Xms512m -Xmx512m"
+              value: "-Xms1g -Xmx1g"
             - name: NETWORK_HOST
               value: "0.0.0.0"
             - name: NODE_NAME
