--- a/core/b2b/core-services/soc/06-agent-daemonset.yaml
+++ b/core/b2b/core-services/soc/06-agent-daemonset.yaml
@@ -102,7 +102,7 @@ spec:
               fi
               
               echo "Launching Suricata..."
-              exec /usr/bin/suricata -c /etc/suricata/suricata.yaml -v
+                exec /usr/bin/suricata -c /etc/suricata/suricata.yaml
           securityContext:
             capabilities:
               add: ["NET_ADMIN", "NET_RAW", "SYS_NICE"]
