--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -16,4 +16,4 @@ resources:
   - 06-agent-daemonset.yaml
   # Deploy base
 # Force report update Tue Feb 10 15:26:46 CET 2026 - Check v6 result
-# Force report update Tue Feb 10 17:00:00 CET 2026 - Fix Agent Config and Suricata Interface
+# Force report update Tue Feb 10 17:15:00 CET 2026 - Fix Dashboard Config
